refactor: 리뷰 피드백 및 테스트 코드 추가 구현 (#194)
* feat: 리뷰 작성을 위한 모임 참여자 조회 응답 DTO 변경 (#163)

* refactor: AlertHandler 기존 코드로 변경 (#163)

* refactor: MeetingController 모임 참여자 조회 응답 DTO 변경 (#163)

* refactor: MeetingController 모임 참여자 조회 응답 DTO 변경 (#163)

* Revert "refactor: MeetingController 모임 참여자 조회 응답 DTO 변경 (#163)"

This reverts commit 3dc30b3c491f01fa86c03402510e82b722da5f6b.

* refactor: MeetingController 모임 참여자 조회 응답 DTO 변경 (#163)

* Revert "refactor: MeetingController 모임 참여자 조회 응답 DTO 변경 (#163)"

This reverts commit 2b3c47cd75deb99d46fb5ef2e958783cc18c06d8.

* refactor: MeetingService 모임 참여자 조회 응답 DTO 변경 (#163)

* refactor: UserService Assert.isTrue 사용으로 변경 (#163)

* test: UserControllerTest 컨트롤러 단위 테스트 고도화 (#163)

* test: UserServiceTest 서비스 단위 테스트 고도화 (#163)

* test: MeetingIntegrationTest 모임 참여자 조회 관련 추가 구현 (#163)